--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vite": "^7.3.1"
   },
   "dependencies": {
+    "firebase": "^12.9.0",
     "papaparse": "^5.5.3",
     "swiper": "^12.1.2"
   }
